chore(`theme`): modifications couleurs style

--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -1,7 +1,7 @@
 @use '../functions/palette' as palette;
 
 $colors: (
-  'primary': #26a17e,
+  'primary': #ef6b1f,
   'yellow': #f7bb16,
   'info': #03c3ec,
 );
